[workspace]
members = ["voxel-physics"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "Apache-2.0-or-MIT"
edition = "2021"
repository = "https://github.com/defernus/rust-workspace-preset"
keywords = ["boilerplate", "workspace", "example", "preset"]

[workspace.dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
rand = "0.8.5"
bytemuck = "1.14.0"

# project crates
voxel-physics = { version = "0.1.0", path = "./voxel-physics" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
