[package]
name = "voxel-physics"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }


[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
rand = { workspace = true }
